testsuite/tests/checks/goto_statements/test.out
goto_statements.adb:6:7: error: goto_statements - rule violation
6 |       goto A;
  |       ^^^^^^^ 

